Added WIP flag.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="container head">
         <h1 class="logo">
-            <a href="index.html">Fare Optimizer</a>
+            <a href="index.html">Fare Optimizer - <div class="wip">W.I.P.</div></a>
         </h1>
         <h4 class="tagline">
             When does it make sense to buy a SEPTA pass?
